--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "protobufjs": "^7.4.0",
     "reflect-metadata": "^0.2.0",
